# Aspion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  conanfile.py  controller_base.hpp  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  forward.hpp  log.cpp  log.hpp  main.cpp  otel-config.yml  otel_init.cpp  otel_init.hpp  perfcmake.json  rabbit_mq_client.cpp  rabbit_mq_client.hpp  request_response.hpp  router.cpp  router.hpp  server.cpp  server.hpp  session.cpp  session.hpp  session_read.cpp  session_write.cpp  test_suite.py  test_suite_visual.py  util.cpp  util.hpp
.github/workflows/: dockerhub-build.yml
apps/: CMakeLists.txt
apps/Aspion/: CMakeLists.txt  main.cpp
conan/profiles/: linux-gcc-x86_64
environments/: requirements.txt
examples/: CMakeLists.txt  main.cpp
nginx/: nginx.dev.conf  nginx.prod.conf
result/: initial_version.txt  v1.txt
src/: controller_base.hpp  forward.hpp  log.cpp  rabbit_mq_client.cpp  router.hpp  util.cpp  util.hpp
src/routing/: CMakeLists.txt
src/routing/include/: controller_base.hpp  json.hpp  log.hpp  middleware.hpp  otel_init.hpp  path_parameter_parser.hpp  rabbit_mq_client.hpp  request_response.hpp  router.hpp  session.hpp  util.hpp
src/routing/src/: log.cpp  router.cpp  session.cpp  session_read.cpp  session_write.cpp  util.cpp
src/server/: CMakeLists.txt
src/server/include/: server.hpp
src/server/src/: server.cpp
test/: CMakeLists.txt  test_suite_visual.py
test/src/: main.cpp  path_parameter_parser_tests.cpp  request_response_tests.cpp
